tests/negative/generics/const_param_kind_mismatch.orng
// const_param_kind_mismatch.orng:10:14: error: expected a value, got a type
//     first[Int, 3](x)
//             ^
// 
fn first[const n: Int, T](arr: [n]T) -> T {
    arr[0]
}
fn main() -> Int {
    let x: [3]Int = [5, 10, 15]
    first[Int, 3](x)
}